{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 66,
  "lineage": "431d8c67-c54e-1621-07f6-bd0b1987fca8",
  "resources": [
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2ec0f45d5c8e4a0",
            "association_id": "eipassoc-0b52f322691701745",
            "domain": "vpc",
            "id": "eipalloc-0a2ec0f45d5c8e4a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fd63414828cd72b",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-18-209-38-105.compute-1.amazonaws.com",
            "public_ip": "18.209.38.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:internet-gateway/igw-082e75db914a2c1af",
            "id": "igw-082e75db914a2c1af",
            "owner_id": "229158811936",
            "tags": {
              "Name": "ninja-igw-01"
            },
            "tags_all": {
              "Name": "ninja-igw-01"
            },
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c0597c8377ec015",
            "arn": "arn:aws:ec2:us-east-1:229158811936:instance/i-03e5656591add422f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e5656591add422f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vergenia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07af18ee4d2624167",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-35-170-68-37.compute-1.amazonaws.com",
            "public_ip": "35.170.68.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eae89f7c2028889e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf4c8cc833e4a920",
            "tags": {
              "Name": "bastion_instance"
            },
            "tags_all": {
              "Name": "bastion_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052900209e30debb0"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.key_pair.aws_key_pair.key_pair",
            "module.key_pair.tls_private_key.rsa",
            "module.security_group.aws_security_group.pub_sg_01",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pri_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c0597c8377ec015",
            "arn": "arn:aws:ec2:us-east-1:229158811936:instance/i-0bf9ef94de980d37d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf9ef94de980d37d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vergenia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080b1ff4211c4a58b",
            "private_dns": "ip-10-0-3-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c06c94073376a1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009765316c6187438",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c25fbc586e3b572a"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.key_pair.aws_key_pair.key_pair",
            "module.key_pair.tls_private_key.rsa",
            "module.security_group.aws_security_group.pri_sg_01",
            "module.subnet.aws_subnet.pri_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2ec0f45d5c8e4a0",
            "association_id": "eipassoc-0b52f322691701745",
            "connectivity_type": "public",
            "id": "nat-0f44b8336878b5b8e",
            "network_interface_id": "eni-03fd63414828cd72b",
            "private_ip": "10.0.1.236",
            "public_ip": "18.209.38.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bf4c8cc833e4a920",
            "tags": {
              "Name": "ninja-nat-01"
            },
            "tags_all": {
              "Name": "ninja-nat-01"
            }
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:route-table/rtb-01d7ec28eb4014c85",
            "id": "rtb-01d7ec28eb4014c85",
            "owner_id": "229158811936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f44b8336878b5b8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ninja-route-priv-01"
            },
            "tags_all": {
              "Name": "ninja-route-priv-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nat.aws_nat_gateway.nat_gw",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:route-table/rtb-0ba7f3b79093e520f",
            "id": "rtb-0ba7f3b79093e520f",
            "owner_id": "229158811936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-082e75db914a2c1af",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "ninja-route-pub-01"
            },
            "tags_all": {
              "Name": "ninja-route-pub-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ddead5c3aca5c8",
            "route_table_id": "rtb-01d7ec28eb4014c85",
            "subnet_id": "subnet-009765316c6187438"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nat.aws_nat_gateway.nat_gw",
            "module.rt.aws_route_table.pri_rt",
            "module.subnet.aws_subnet.pri_sub",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd9fc971a60ba212",
            "route_table_id": "rtb-01d7ec28eb4014c85",
            "subnet_id": "subnet-0a44d6a4a546f385a"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.elastic_ip",
            "module.nat.aws_nat_gateway.nat_gw",
            "module.rt.aws_route_table.pri_rt",
            "module.subnet.aws_subnet.pri_sub",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003e16a58c36eed07",
            "route_table_id": "rtb-0ba7f3b79093e520f",
            "subnet_id": "subnet-0bf4c8cc833e4a920"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.rt.aws_route_table.pub_rt",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de8ff3ac09413b03",
            "route_table_id": "rtb-0ba7f3b79093e520f",
            "subnet_id": "subnet-0b66369990d33fca4"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.rt.aws_route_table.pub_rt",
            "module.subnet.aws_subnet.pub_sub",
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pri_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:security-group/sg-0c25fbc586e3b572a",
            "description": "for EC2 Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c25fbc586e3b572a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "229158811936",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:security-group/sg-052900209e30debb0",
            "description": "for EC2 Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052900209e30debb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "229158811936",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:subnet/subnet-009765316c6187438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009765316c6187438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "229158811936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-priv-sub-1"
            },
            "tags_all": {
              "Name": "ninja-priv-sub-1"
            },
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:subnet/subnet-0a44d6a4a546f385a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44d6a4a546f385a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "229158811936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-priv-sub-2"
            },
            "tags_all": {
              "Name": "ninja-priv-sub-2"
            },
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:subnet/subnet-0bf4c8cc833e4a920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf4c8cc833e4a920",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "229158811936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-1"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-1"
            },
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:subnet/subnet-0b66369990d33fca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b66369990d33fca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "229158811936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-2"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-2"
            },
            "vpc_id": "vpc-00fbd03fdfe81ed09"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninja_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:229158811936:vpc/vpc-00fbd03fdfe81ed09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bc29793875b541e",
            "default_route_table_id": "rtb-02198559b4341918e",
            "default_security_group_id": "sg-0537b100732cd09ab",
            "dhcp_options_id": "dopt-0092fbf1da90a5a71",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fbd03fdfe81ed09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02198559b4341918e",
            "owner_id": "229158811936",
            "tags": {
              "Name": "ninja-vpc-01"
            },
            "tags_all": {
              "Name": "ninja-vpc-01"
            }
          }
        }
      ]
    }
  ]
}